--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 appdirs==1.4.4
 apturl==0.5.2
+asgiref==3.7.2
+async-timeout==4.0.3
 attrs==21.2.0
 Babel==2.9.1
 bcrypt==3.2.0
@@ -22,6 +24,8 @@ defusedxml==0.7.1
 distlib==0.3.7
 distro==1.7.0
 distro-info==1.1+ubuntu0.1
+Django==5.0
+django-redis==5.4.0
 docker==5.0.3
 docker-compose==1.29.2
 dockerpty==0.4.1
@@ -102,6 +106,7 @@ pyusb==1.0.2
 pyxdg==0.27
 PyYAML==5.4.1
 qrcode==6.1
+redis==5.0.1
 reportlab==3.5.55
 requests==2.25.1
 requests-file==1.5.1
@@ -110,6 +115,7 @@ SecretStorage==3.3.1
 six==1.16.0
 soupsieve==2.5
 SQLAlchemy==2.0.21
+sqlparse==0.4.4
 systemd-python==234
 termcolor==2.3.0
 texttable==1.6.4
